// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileScreen - Authenticated matches snapshot when authenticated 1`] = `
<LinearGradient
  colors={
    [
      "rgba(213, 240, 219, 0.19)",
      "rgb(252, 250, 246)",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingVertical": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 8,
        "marginTop": 64,
        "paddingHorizontal": 16,
      }
    }
  >
    <View
      style={
        {
          "alignContent": "center",
          "flexDirection": "row",
          "gap": 8,
          "justifyContent": "space-between",
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            undefined,
            {
              "fontFamily": "LexendDeca",
              "fontSize": 32,
              "fontWeight": "bold",
              "lineHeight": 32,
              "paddingVertical": 8,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        Mis plantas
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "opacity": 1,
            "paddingVertical": 8,
          }
        }
        testID="settings"
      >
        <Text
          allowFontScaling={false}
          selectable={false}
          style={
            [
              {
                "color": "#11181C",
                "fontSize": 30,
              },
              undefined,
              {
                "fontFamily": "ionicons",
                "fontStyle": "normal",
                "fontWeight": "normal",
              },
              {},
            ]
          }
        >
          
        </Text>
      </View>
    </View>
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontFamily": "LexendDeca",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Añade todas tus plantas para cuidarlas fácilmente
    </Text>
  </View>
  <TabView
    initialLayout={
      {
        "width": 750,
      }
    }
    navigationState={
      {
        "index": 0,
        "routes": [
          {
            "key": "plants",
            "title": "Plantas",
          },
          {
            "key": "gardens",
            "title": "Lugares",
          },
        ],
      }
    }
    onIndexChange={[Function]}
    renderScene={
      {
        "gardens": "Gardens",
        "plants": [Function],
      }
    }
    renderTabBar={[Function]}
    style={
      {
        "marginTop": 16,
      }
    }
  />
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      {
        "alignItems": "center",
        "backgroundColor": "#bfd8c5ff",
        "borderRadius": 28,
        "bottom": 16,
        "elevation": 5,
        "height": 56,
        "justifyContent": "center",
        "opacity": 1,
        "position": "absolute",
        "right": 16,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.3,
        "shadowRadius": 4,
        "width": 56,
      }
    }
  >
    <Text
      allowFontScaling={false}
      selectable={false}
      style={
        [
          {
            "color": "#333",
            "fontSize": 30,
          },
          undefined,
          {
            "fontFamily": "ionicons",
            "fontStyle": "normal",
            "fontWeight": "normal",
          },
          {},
        ]
      }
    >
      
    </Text>
  </View>
</LinearGradient>
`;

exports[`ProfileScreen - Not Authenticated matches snapshot when not authenticated 1`] = `
<LinearGradient
  colors={
    [
      "rgba(213, 240, 219, 0.19)",
      "rgb(252, 250, 246)",
    ]
  }
  style={
    [
      {
        "flex": 1,
      },
      {
        "paddingVertical": 16,
      },
    ]
  }
>
  <View
    style={
      {
        "gap": 8,
        "marginTop": 64,
        "paddingHorizontal": 16,
      }
    }
  >
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          undefined,
          {
            "fontFamily": "LexendDeca",
            "fontSize": 32,
            "fontWeight": "bold",
            "lineHeight": 32,
            "paddingVertical": 8,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      No estás autenticado
    </Text>
    <Text
      style={
        [
          {
            "color": "#11181C",
          },
          {
            "fontFamily": "LexendDeca",
            "fontSize": 16,
            "lineHeight": 24,
          },
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
          undefined,
        ]
      }
    >
      Por favor, inicia sesión para ver tus plantas y jardines.
    </Text>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#bfd8c5ff",
          "borderRadius": 25,
          "elevation": 5,
          "height": 50,
          "justifyContent": "center",
          "marginTop": 16,
          "opacity": 1,
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 2,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 4,
          "width": "100%",
        }
      }
    >
      <Text
        style={
          {
            "color": "#11181C",
            "fontSize": 16,
            "fontWeight": "bold",
          }
        }
      >
        Iniciar sesión
      </Text>
    </View>
    <View
      style={
        {
          "marginTop": 16,
        }
      }
    >
      <Text
        style={
          [
            {
              "color": "#11181C",
            },
            {
              "fontFamily": "LexendDeca",
              "fontSize": 16,
              "lineHeight": 24,
            },
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
            undefined,
          ]
        }
      >
        ¿No tienes cuenta?
      </Text>
      <View
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": false,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#bfd8c5ff",
            "borderRadius": 25,
            "elevation": 5,
            "height": 50,
            "justifyContent": "center",
            "marginTop": 16,
            "opacity": 1,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 2,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 4,
            "width": "100%",
          }
        }
      >
        <Text
          style={
            {
              "color": "#11181C",
              "fontSize": 16,
              "fontWeight": "bold",
            }
          }
        >
          Crea una
        </Text>
      </View>
    </View>
  </View>
</LinearGradient>
`;
